(library
 (name lib)
 (libraries
  bio_io
  core
  core_unix
  core_unix.filename_unix
  core_unix.sys_unix
  core_unix.time_unix
  fmt.tty
  logs
  logs.fmt
  shexp.process
  re)
 (inline_tests
  (deps test_group_data.tsv test_seqs.fa rnr_100.fa))
 (preprocess
  (pps ppx_jane))
 (instrumentation
  (backend bisect_ppx)))
